Visibility fixes

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -62,10 +62,10 @@ nav-item:hover, dropdown-item:hover{
   background-color: #1e1e1e;
 }
 .greyBG1{
-  background-color: #c6ccd8;
+  background-color: #202022;
 }
 .greyBG2{
-  
+
 }
 main{
   position: relative;
